syntax = "proto3";

package proto;

import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message NoArg {
}

message NoReply {
}

message PutArg {
    int64 userId = 1; 
    int32 server = 2;
    int32 roomId = 3;
}

message PutReply {
    int32 seq = 1;
}

message DelArg {
    int64 userId = 1;
    int32 seq = 2;
    int32 roomId = 3;
}

message DelReply {
    bool has = 1;
}

message DelServerArg {
    int32 server = 1;
}

message GetArg {
    int64 userId = 1;
}

message GetReply {
    repeated int32 seqs = 1;
    repeated int32 servers = 2;
}

message GetAllReply {
	repeated int64 userIds = 1;
    repeated GetReply sessions= 2;
}

message MGetArg {
    repeated int64 userIds = 1;
}

message MGetReply {
	repeated int64 userIds = 1;
    repeated GetReply sessions= 2;
}

message UserCountArg {
    int64 userId = 1;
}

message UserCountReply {
    int32 count = 1;
}

message CountReply {
    int32 count = 1;
}

message RoomCountArg {
    int32 roomId = 1;
}

message RoomCountReply {
    int32 count = 1;
}

message AllRoomCountReply {
    map<int32, int32> counter = 1;
}

message AllServerCountReply {
    map<int32, int32> counter = 1;
}
